src/tests/test-src/errors/R6-bad-file-mode.syntran
// R6: bad-file-mode
// open() was given a file-mode character other than r or w

let f = open("build/rt_file_r6.txt", "x");
